contig-derive/tests/ui/missing_scalar.stderr
error: missing `scalar` attribute: use #[contig(scalar = f64)]
 --> tests/ui/missing_scalar.rs:3:1
  |
3 | #[contig]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `contig` (in Nightly builds, run with -Z macro-backtrace for more info)
