contig-derive/tests/ui/missing_scalar.rs
use contig_derive::contig;

#[contig]
struct MissingScalar {
    value: f64,
}

fn main() {}
